--- a/package.json
+++ b/package.json
@@ -8,18 +8,20 @@
     "type": "git",
     "url": "https://github.com/Tien-Thuy/imap-server.git"
   },
+  "main": "./dist/index",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node server.js",
     "dev": "npm link && nodemon",
     "build": "tsc && npx tsc-alias",
-    "upgrade": "npm install -g npm-check-updates && ncu -u && npm install",
-    "lib": "npm link @huongda-group/soul"
+    "upgrade": "npm install -g npm-check-updates && ncu -u && npm install"
   },
   "dependencies": {
+    "randomstring": "^1.3.1",
+    "tls": "^0.0.1",
     "tslib": "~2.8.1"
   },
   "devDependencies": {
     "@types/node": "^22.13.9",
+    "@types/randomstring": "^1.3.0",
     "lint-staged": "~15.4.3",
     "node-config": "~0.0.2",
     "node-gyp": "~11.1.0",
